--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
       
       </ul>
     </div>
-    <script src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/main.js"></script>
 </body>
 </html>
